fix spelling of artifact

--- a/index.html
+++ b/index.html
@@ -19,11 +19,11 @@
     </li>
 
     <li>
-      <a href='javascript:(function()%7Bdocument.location %3D "https%3A%2F%2Fpublisher.preview.alphagov.co.uk%2F%3Fdirection%3Dasc%26list%3Dpublished%26sort%3Dslug%26string_filter%3D" %2B document.location.pathname.substr(1)%7D)()'>goto-publisher</a> - Search for this artefact in publisher, to see the published editions/editorial content.
+      <a href='javascript:(function()%7Bdocument.location %3D "https%3A%2F%2Fpublisher.preview.alphagov.co.uk%2F%3Fdirection%3Dasc%26list%3Dpublished%26sort%3Dslug%26string_filter%3D" %2B document.location.pathname.substr(1)%7D)()'>goto-publisher</a> - Search for this artifact in publisher, to see the published editions/editorial content.
     </li>
 
     <li>
-      <a href='javascript:(function()%7Bdocument.location%20%3D%20%22https%3A%2F%2Fpanopticon.preview.alphagov.co.uk%2Fartefacts%3Futf8%3D%25E2%259C%2593%26section%3D%26specialist_sector%3D%26kind%3D%26state%3D%26search%3D%22%20%2B%20document.location.pathname.substr(1)%7D)()'>goto panopticon</a> - Search for this atefact in panopticon. Useful for seeing what format something is in, or which application is responsible for publishing/displaying it.
+      <a href='javascript:(function()%7Bdocument.location%20%3D%20%22https%3A%2F%2Fpanopticon.preview.alphagov.co.uk%2Fartefacts%3Futf8%3D%25E2%259C%2593%26section%3D%26specialist_sector%3D%26kind%3D%26state%3D%26search%3D%22%20%2B%20document.location.pathname.substr(1)%7D)()'>goto panopticon</a> - Search for this artifact in panopticon. Useful for seeing what format something is in, or which application is responsible for publishing/displaying it.
     </li>
 
     <li>
