--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
     </li>
 
     <li>
-      <a href='javascript:(function()%7Bwindow.location %3D window.location.href.replace(window.location.hostname%2C "www.dev.gov.uk").replace(%2F%5Ehttps%2F%2C'http')%7D)()'>env-dev</a> - View the current page on your local dev environment
+      <a href='javascript:(function()%7Bwindow.location %3D window.location.href.replace(window.location.hostname%2C "www.dev.gov.uk").replace(%2F%5Ehttps%2F%2C"http")%7D)()'>env-dev</a> - View the current page on your local dev environment
     </li>
     <li>
       <a href='javascript:(function()%7Bwindow.location%20%3D%20window.location.href.replace(window.location.hostname%2C%20%22www.preview.alphagov.co.uk%22)%7D)()'>env-preview</a> - View the current page on the preview environment
