--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 
   <ol>
     <li>
-      <a href="javascript:(function()%7Balert(GOVUK.Analytics.Format)%7D)()">WhatTheFormat</a> - This relies on the custom Google Analytics var "Format".
+      <a href="javascript:(function()%7Balert(%24('meta%5Bname%5E%3D%22govuk%3A%22%5D').get().map(function(meta)%20%7B%20return%20meta.name.split('%3A')%5B1%5D%20%2B%20'%3A%20%22'%20%2B%20meta.content%20%2B%20'%22'%7D).join(%22%5Cn%5Cn%22))%7D)()">Gov-a-lytics</a> - Shows all the analytics values for a GOV.UK page, including <em>format</em> and <em>rendering-app</em>.
     </li>
 
     <li>
