--- a/index.html
+++ b/index.html
@@ -47,5 +47,9 @@
     <li>
       <a href="javascript:(function()%7Bvar%20req%20%3D%20new%20XMLHttpRequest()%3Breq.open('GET'%2C%20document.location%2C%20false)%3Breq.send(null)%3Bdocument.location%3Dreq.getAllResponseHeaders().match('Link%3A%20%3C(.*)%3E%3B%20rel%3D%22up%22')%5B1%5D%7D)()">PDF to Web</a> - Use on a Whitehall PDF to go to the page of publication it was uploaded to.
     </li>
+
+    <li>
+      <a href='javascript:(function()%7Bwindow.location%20=%20window.location.href.replace(window.location.hostname,%20%22www.preview.alphagov.co.uk%22)%20+%20%22.txt%22%7D)()'>See Govspeak</a> - Goes to the preview of a Smart Answer and shows its Govspeak markup. It only works on outcome pages.
+    </li>
   </ol>
 </body>
