--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
       <a href='javascript:(function()%7Bwindow.location %3D window.location.href.replace(window.location.hostname%2C "www.dev.gov.uk").replace(%2F%5Ehttps%2F%2C"http")%7D)()'>env-dev</a> Goes to the current page on your local <em>dev</em> environment
     </li>
     <li>
-      <a href='javascript:(function()%7Bwindow.location%20%3D%20window.location.href.replace(window.location.hostname%2C%20%22www.preview.alphagov.co.uk%22)%7D)()'>env-preview</a> - Goes to the current page on the <em>preview</em> environment
+      <a href='javascript:(function()%7Bwindow.location%20%3D%20window.location.href.replace(window.location.hostname%2C%20%22www-origin.integration.publishing.service.gov.uk%22)%7D)()'>env-integration</a> - Goes to the current page on the <em>integration</em> environment
     </li>
 
     <li>
@@ -55,7 +55,7 @@
     </li>
 
     <li>
-      <a href='javascript:(function()%7Bwindow.location%20=%20window.location.href.replace(window.location.hostname,%20%22www.preview.alphagov.co.uk%22)%20+%20%22.txt%22%7D)()'>See Govspeak</a> - Goes to the preview of a Smart Answer and shows its Govspeak markup. It only works on outcome pages.
+      <a href='javascript:(function()%7Bwindow.location%20=%20window.location.href.replace(window.location.hostname,%20%22www-origin.integration.publishing.service.gov.uk%22)%20+%20%22.txt%22%7D)()'>See Govspeak</a> - Goes to the preview of a Smart Answer and shows its Govspeak markup. It only works on outcome pages.
     </li>
     <li>
       <a href='javascript:(function(){var newcss="[class^=\"govuk-\"] { background:rgba(255,0,0,0.25);}";if("\v"=="v"){document.createStyleSheet().cssText=newcss}else{var tag=document.createElement("style");tag.type="text/css";document.getElementsByTagName("head")[0].appendChild(tag);tag[(typeof document.body.style.WebkitAppearance=="string")?"innerText":"innerHTML"]=newcss}})();'>Highlight Components</a> - Highlights where GOV.UK Components are used on the page.
